--- a/ASW-Trab3/war/ASW_Trab3.css
+++ b/ASW-Trab3/war/ASW_Trab3.css
@@ -1,37 +1,59 @@
-body{
-	text-align: center;
-	font-family: verdana, sans-serif;
+body {
+    text-align: center;
+    font-family: verdana, sans-serif;
 }
 
-
-/** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: #777777;
+    margin: 40px 0px 70px;
+    text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+    display: block;
+    font-size: 16pt;
 }
 
-/** Most GWT widgets already have a style name defined */
+.paddBottom {
+    padding-bottom 5%;
+}
+
+.bottomBorder {
+    border-bottom: 4px solid gray;
+}
+
 .gwt-DialogBox {
-  width: 400px;
+    width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+    margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+    color: red;
 }
 
+
 /** Set ids using widget.getElement().setId("idOfElement") */
+
 #closeButton {
-  margin: 15px 6px 6px;
+    margin: 15px 6px 6px;
+}
+
+
+/** Style for flex table */
+
+.tableWithRowsDelimiter td {
+    padding-bottom: 5%;
+}
+
+.padd-lr-5 {
+    padding: 5% 5% 5% 5%;
+}
+
+.width-25 {
+    width: 25%;
 }
