--- a/ASW-Trab3/war/ASW_Trab3.css
+++ b/ASW-Trab3/war/ASW_Trab3.css
@@ -1,6 +1,13 @@
-body {
+html, body {
     text-align: center;
     font-family: verdana, sans-serif;
+    height:100%; 
+    margin:0;
+   	padding:0;
+}
+body{
+	display:flex; 
+  	flex-direction:column; 
 }
 
 h1 {
@@ -11,40 +18,9 @@ h1 {
     text-align: center;
 }
 
-.sendButton {
-    display: block;
-    font-size: 16pt;
-}
-
-.paddBottom {
-    padding-bottom 5%;
-}
-
 .bottomBorder {
     border-bottom: 4px solid gray;
 }
-
-.gwt-DialogBox {
-    width: 400px;
-}
-
-.dialogVPanel {
-    margin: 5px;
-}
-
-.serverResponseLabelError {
-    color: red;
-}
-
-
-/** Set ids using widget.getElement().setId("idOfElement") */
-
-#closeButton {
-    margin: 15px 6px 6px;
-}
-
-
-/** Style for flex table */
 
 .tableWithRowsDelimiter td {
     padding-bottom: 5%;
